<resources>
    <string name="app_name">Food_App</string>
    <string name="meal_hint">Serch Meal</string>
    <string name="favourite_txt">Favourite</string>
    <string name="food_txt">Food</string>
    <string name="account_txt">Account</string>
    <string name="category_txt">Category</string>
    <string name="not_found_txt">Sorry, we cannot found your search.</string>
    <string name="register_txt">If you dont have a account register now!!</string>
    <string name="login_txt">LOGIN</string>
    <string name="user_txt">Type your Username</string>
    <string name="password_txt">Type your Password</string>
    <string name="register_txt2">REGISTER</string>
    <string name="mail_txt">Type your Mail Address</string>
    <string name="link_txt">Paste the Link of an Image</string>
    <string name="logout_txt">LOGOUT</string>
    <string name="welcome_txt">Welcome to Food App</string>
    <string name="sorry_txt">Sorry this service is not available at the moment</string>
</resources>