<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.register.RegisterFragment">



    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="369dp"
        android:layout_margin="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    <EditText
        android:id="@+id/edtUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:hint="@string/user_txt"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/edtPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:hint="@string/password_txt"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@id/edtUsername"
        app:layout_constraintBottom_toTopOf="@id/edtMail"
        app:layout_constraintStart_toStartOf="@id/edtUsername"
        app:layout_constraintTop_toBottomOf="@id/edtUsername" />

        <EditText
            android:id="@+id/edtMail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:hint="@string/mail_txt"
            android:inputType="text"
            app:layout_constraintBottom_toTopOf="@id/edtImage"
            app:layout_constraintEnd_toEndOf="@id/edtPassword"
            app:layout_constraintStart_toStartOf="@id/edtPassword"
            app:layout_constraintTop_toBottomOf="@id/edtPassword" />

        <EditText
            android:id="@+id/edtImage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:hint="@string/link_txt"
            android:inputType="text"
            app:layout_constraintBottom_toTopOf="@id/btnRegister"
            app:layout_constraintEnd_toEndOf="@id/edtMail"
            app:layout_constraintStart_toStartOf="@id/edtMail"
            app:layout_constraintTop_toBottomOf="@id/edtMail" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/register_txt2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/edtImage"
        app:layout_constraintStart_toStartOf="@id/edtImage"
        app:layout_constraintTop_toBottomOf="@id/edtImage" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>